--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -546,6 +546,22 @@
         </div>
     </div>
 
+    <!-- Deletion Confirmation Modal -->
+    <div id="deleteConfirmModal" class="modal-overlay"
+        style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:1100; align-items:center; justify-content:center;">
+        <div class="glass-card" style="max-width:400px; padding:2rem; background:white; text-align:center;">
+            <div style="font-size:3rem; color:var(--error); margin-bottom:1rem;">⚠️</div>
+            <h3 id="confirmTitle" style="margin-top:0;">Emin misiniz?</h3>
+            <p id="confirmMessage" style="color:var(--muted); margin-bottom:1.5rem;">Bu işlem geri alınamaz.</p>
+            <div style="display:flex; gap:1rem; justify-content:center;">
+                <button id="confirmYesBtn" class="btn-primary"
+                    style="background:var(--error); width:auto; padding:0.75rem 1.5rem;">Evet, Sil</button>
+                <button id="confirmNoBtn" class="btn-primary"
+                    style="background:#9ca3af; width:auto; padding:0.75rem 1.5rem;">İptal</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/app.js?v=4"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
