--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -172,6 +172,14 @@
                         </div>
 
                         <div class="form-group">
+                            <label>Depo Seçin</label>
+                            <select id="seWarehouse"
+                                style="width:100%; padding:0.5rem; border:1px solid #e5e7eb; border-radius:8px;">
+                                <option value="">Yükleniyor...</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
                             <label>Miktar</label>
                             <input type="number" id="seQuantity" placeholder="Eklenecek stok miktarı"
                                 style="width:100%; padding:0.5rem; border:1px solid #e5e7eb; border-radius:8px;">
@@ -464,16 +472,10 @@
                     </select>
                 </div>
             </div>
-            <div class="grid" style="grid-template-columns: 1fr 1fr; gap:1rem;">
+            <div class="grid" style="grid-template-columns: 1fr; gap:1rem;">
                 <div class="form-group">
                     <select id="pUnit" style="width:100%; padding:0.5rem; border:1px solid #e5e7eb; border-radius:8px;">
                         <option>Birim Seç...</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <select id="pWarehouse"
-                        style="width:100%; padding:0.5rem; border:1px solid #e5e7eb; border-radius:8px;">
-                        <option>Depo Seç...</option>
                     </select>
                 </div>
             </div>
