--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -33,14 +33,14 @@
             </div>
 
             <div class="menu">
-                <div class="menu-item active">🏠 Anasayfa</div>
-                <div class="menu-item">🏢 Şirketler</div>
-                <div class="menu-item">📦 Stoklar</div>
-                <div class="menu-item">📋 Teklifler</div>
-                <div class="menu-item">🧾 Faturalar</div>
-                <div class="menu-item">👥 Kullanıcı Yönetimi</div>
-                <div class="menu-item">⚙️ Ayarlar</div>
-                <div class="menu-item">📜 Denetim Kayıtları</div>
+                <div class="menu-item active" onclick="switchView('dashboard')">🏠 Anasayfa</div>
+                <div class="menu-item" onclick="switchView('companies')">🏢 Şirketler</div>
+                <div class="menu-item" onclick="switchView('inventory')">📦 Stoklar</div>
+                <div class="menu-item" onclick="switchView('offers')">📋 Teklifler</div>
+                <div class="menu-item" onclick="switchView('invoices')">🧾 Faturalar</div>
+                <div class="menu-item" onclick="switchView('users')">👥 Kullanıcı Yönetimi</div>
+                <div class="menu-item" onclick="switchView('settings')">⚙️ Ayarlar</div>
+                <div class="menu-item" onclick="switchView('logs')">📜 Denetim Kayıtları</div>
             </div>
 
             <div style="margin-top: auto;">
@@ -69,8 +69,12 @@
                     <div class="glass-card" style="text-align: left;">
                         <h3>Hızlı İşlemler</h3>
                         <p>Sisteme yeni kullanıcı ekleyebilir veya stok kontrolü yapabilirsiniz.</p>
-                        <button class="btn-primary" onclick="switchView('users')"
-                            style="margin-top:1rem; width:auto;">Kullanıcıları Yönet</button>
+                        <div style="display:flex; gap:0.5rem; flex-wrap:wrap; margin-top:1rem;">
+                            <button class="btn-primary" onclick="switchView('users')" style="width:auto;">Kullanıcıları
+                                Yönet</button>
+                            <button class="btn-primary" onclick="switchView('stock-entry')"
+                                style="width:auto; background:#10b981;">📦 Stok Girişi Yap</button>
+                        </div>
                     </div>
 
                     <div class="glass-card" style="text-align: left;">
@@ -84,30 +88,30 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <!-- SECTION: COMPANIES -->
-                <div id="section-companies" class="view-section" style="display:none;">
-                    <div style="margin-bottom: 1rem; display:flex; justify-content:flex-end;">
-                        <button class="btn-primary" onclick="openCompanyModal()" style="width: auto;">+ Yeni
-                            Şirket</button>
-                    </div>
-                    <div class="glass-card" style="padding:0; overflow-x:auto;">
-                        <table class="user-table">
-                            <thead>
-                                <tr>
-                                    <th>Şirket Adı</th>
-                                    <th>Vergi No</th>
-                                    <th>Negatif Stok İzni</th>
-                                    <th style="text-align:right;">İşlemler</th>
-                                </tr>
-                            </thead>
-                            <tbody id="companyListBody">
-                                <tr>
-                                    <td colspan="4" style="text-align:center;">Yükleniyor...</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+            <!-- SECTION: COMPANIES -->
+            <div id="section-companies" class="view-section" style="display:none;">
+                <div style="margin-bottom: 1rem; display:flex; justify-content:flex-end;">
+                    <button class="btn-primary" onclick="openCompanyModal()" style="width: auto;">+ Yeni
+                        Şirket</button>
+                </div>
+                <div class="glass-card" style="padding:0; overflow-x:auto;">
+                    <table class="user-table">
+                        <thead>
+                            <tr>
+                                <th>Şirket Adı</th>
+                                <th>Vergi No</th>
+                                <th>Negatif Stok İzni</th>
+                                <th style="text-align:right;">İşlemler</th>
+                            </tr>
+                        </thead>
+                        <tbody id="companyListBody">
+                            <tr>
+                                <td colspan="4" style="text-align:center;">Yükleniyor...</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
@@ -341,6 +345,45 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
+            </div>
+
+            <!-- SECTION: STOCK ENTRY -->
+            <div id="section-stock-entry" class="view-section" style="display:none;">
+                <div class="glass-card" style="max-width:500px; margin: 0 auto; text-align: left;">
+                    <h3 style="margin-top:0;">Yeni Stok Girişi</h3>
+                    <p style="font-size:0.8rem; color:var(--muted); margin-bottom:1.5rem;">Ürün seçerek stok miktarını
+                        güncelleyebilirsiniz.</p>
+
+                    <div class="form-group">
+                        <label>Ürün Seçin</label>
+                        <select id="seProduct"
+                            style="width:100%; padding:0.5rem; border:1px solid #e5e7eb; border-radius:8px;">
+                            <option value="">Yükleniyor...</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Depo Seçin</label>
+                        <select id="seWarehouse"
+                            style="width:100%; padding:0.5rem; border:1px solid #e5e7eb; border-radius:8px;">
+                            <option value="">Yükleniyor...</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Miktar</label>
+                        <input type="number" id="seQuantity" placeholder="Eklenecek stok miktarı"
+                            style="width:100%; padding:0.5rem; border:1px solid #e5e7eb; border-radius:8px;">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Açıklama (Opsiyonel)</label>
+                        <input type="text" id="seDescription" placeholder="Örn: Yeni sevkiyat"
+                            style="width:100%; padding:0.5rem; border:1px solid #e5e7eb; border-radius:8px;">
+                    </div>
+
+                    <button class="btn-primary" onclick="submitStockEntry()" style="margin-top:1rem;">Stok Ekle</button>
                 </div>
             </div>
 
