--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2S1O - Dashboard</title>
     <link rel="stylesheet" href="s2o1.css?v=3">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
+    <script src="js/lib/chart.min.js"></script>
+    <script src="js/lib/xlsx.full.min.js"></script>
+    <script src="js/lib/jspdf.umd.min.js"></script>
+    <script src="js/lib/jspdf.plugin.autotable.min.js"></script>
     <style>
         /* Global Dashboard Fixes */
         body {
@@ -606,7 +606,7 @@
     <div id="toastContainer" class="toast-container"></div>
     <div class="dashboard-layout">
         <!-- Sidebar -->
-        <div class="sidebar" id="sidebar">
+        <div class="sidebar" id="sidebar" style="visibility: hidden;">
             <div class="logo-area">
                 <div class="logo-text">2S1O v2.0</div>
             </div>
@@ -2915,7 +2915,7 @@
     </div>
 
     <!-- External Script for QR Code / Barcode Scanning -->
-    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+    <script src="js/lib/html5-qrcode.min.js" type="text/javascript"></script>
 
     <!-- Maintenance Overlay -->
     <div id="maintenanceOverlay"
